Crash when trying to render a scene without camera. #48262

Closed
opened 2016-04-24 19:20:53 +02:00 by Josh Olson · 10 comments

I am using a mac operating system running O SX version 10.9.5
It has a 2.8 GHz Intel Core 2 Duo and 2 GB 800 MHz DDR2 SDRAM Memory.
The graphic card is ATI Radeon HD 2600 Pro 256 MB

The Blender version I am using is 2.77a

When I try to render an animation Blender crashes with a message that says Blend quit unexpectedly.

  1. Create an animation.
  2. Click the render button on the top left of blender.
  3. Select render animation.
  4. An instant crash will result.
I am using a mac operating system running O SX version 10.9.5 It has a 2.8 GHz Intel Core 2 Duo and 2 GB 800 MHz DDR2 SDRAM Memory. The graphic card is ATI Radeon HD 2600 Pro 256 MB The Blender version I am using is 2.77a When I try to render an animation Blender crashes with a message that says Blend quit unexpectedly. 1. Create an animation. 2. Click the render button on the top left of blender. 3. Select render animation. 4. An instant crash will result.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Josh Olson self-assigned this 2016-04-24 19:20:53 +02:00
Author

Added subscriber: @Jolson620

Added subscriber: @Jolson620

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is not enough information, either give us exact steps to redo the crash, or better - include a blend file which crashes when rendering.

This is not enough information, either give us exact steps to redo the crash, or better - include a blend file which crashes when rendering.

Added subscriber: @vandyke4ad

Added subscriber: @vandyke4ad

clam_vent.blend
The attached file causes an instant crash if the Render>Render image option is clicked. Also if done via Z Pie menu, clicking "Rendered" or pressing Numpad9, turns the 3D View black with Mac spinning beach ball of death, then crash.
Another file did the same (accidental choice of "Rendered"), but the 3D View had a dark textured look all over, which lasted longer before the crash happened.
Files were created with 2.76: only installed 2.77a today.
Fortunately, I don't actually need this to work - the attached file is for 3D printing.

[clam_vent.blend](https://archive.blender.org/developer/F307308/clam_vent.blend) The attached file causes an instant crash if the Render>Render image option is clicked. Also if done via Z Pie menu, clicking "Rendered" or pressing Numpad9, turns the 3D View black with Mac spinning beach ball of death, then crash. Another file did the same (accidental choice of "Rendered"), but the 3D View had a dark textured look all over, which lasted longer before the crash happened. Files were created with 2.76: only installed 2.77a today. Fortunately, I don't actually need this to work - the attached file is for 3D printing.

Added subscriber: @mont29

Added subscriber: @mont29

This scene has no camera, multiview check did not took that possibility into account… fix incoming.

This scene has no camera, multiview check did not took that possibility into account… fix incoming.
Bastien Montagne changed title from Mac crash issue. to Crash when trying to render a scene without camera. 2016-05-06 21:41:07 +02:00
Josh Olson was unassigned by Bastien Montagne 2016-05-06 21:41:07 +02:00
Bastien Montagne self-assigned this 2016-05-06 21:41:07 +02:00

This issue was referenced by 8c2cec937b

This issue was referenced by 8c2cec937bab7ace568bf5cd1448cd8632406883

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48262
No description provided.