Fix T48262:  Crash when trying to render a scene without camera.